removed shippingcart from models

--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingCart
+﻿@model Cart
 <form method="post">
         <div class="card  container pt-4">
             <div class="card-header bg-primary text-light ml-0  row ">
