--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
@@ -27,7 +27,7 @@
                                 <h5 class="text-muted pb-2">Systemrekommendation @Model.Product.SystemReq</h5>
                             </div>
                             <div class="row pl-2">
-                                <h5 class="text-muted pb-2">Utgivningsdatum @Model.Product.ReleaseDate.ToString("dd/mm/yyyy")</h5>
+                                <h5 class="text-muted pb-2">Utgivningsdatum @Model.Product.ReleaseDate.ToString("MMMM dd, yyyy")</h5>
                             </div>
 
                             <div class="row pl-2">
