--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Details.cshtml
@@ -18,7 +18,7 @@
                         <div class="col-8 col-lg-8">
 
                             <div class="row pl-2">
-                                <h5 class="text-muted">REQ ÅLDER : @Model.Product.PgRating år</h5>
+                                <h5 class="text-muted">REK ÅLDER : @Model.Product.PgRating år</h5>
                             </div>
                             <div class="row pl-2">
                                 <h5 class="text-muted pb-2">Pris @Model.Product.Price.ToString("c")</h5>
