--- a/AlmedalGameStoreWeb/wwwroot/css/site.css
+++ b/AlmedalGameStoreWeb/wwwroot/css/site.css
@@ -13,6 +13,38 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
+body {  
+   
+    margin-bottom: 60px;
+}
+
+.navbar{
+    opacity: 0.85;
+}
+
+.showcase-start {
+    background: url(/images/Almedal_IMG_0263_SAJO_1920x1080-1920x1280.jpg) center center no-repeat;
+    width: 100%;
+    height: 60vh;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-top: -90px;
+}
+
+.ags-motto {
+    
+    background-color: #f3f3f3;
+    margin: auto;
+    width: 50%;
+    min-width: 300px;
+    height: 35%;
+    border: 1px solid #008cba;
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+    text-align: center;
 }
