image and motto moved to index

--- a/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
+++ b/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
@@ -52,11 +52,11 @@
 
       
     </header>
-    <div class ="showcase-start">
+    @*<div class ="showcase-start">
         <div class ="ags-motto">
             <h1>Spel är mer än bara lek!</h1>
         </div>
-    </div>
+    </div>*@
     <div class="container">
         <main role="main" class="pb-3">
             <partial name="_Notification" />
