--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Index.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<Product>
 
+    <div class ="showcase-start">
+        <div class ="ags-motto">
+            <h1>Spel är mer än bara lek!</h1>
+        </div>
+    </div>
 <div class="row pb-3">
     @foreach(var product in Model)
     {
