--- a/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
+++ b/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
             </div>
             <div class="offcanvas-body">
             <p>Products</p>
-            <button class="btn btn-secondary" type="button" <a href="https://google.com"></a>Check out</button>
+	            <button class="btn btn-secondary" type="button">Check out</button>
             </div>
         </div>
     </div>
