--- a/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
+++ b/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 
-            <div class="container-fluid">
+            @*<div class="container-fluid">*@
+                <div class="container">
                 <a class="navbar-brand" asp-area="Guest" asp-controller="Home" asp-action="Index"><img src="\images\plain_logo_nobg.png" alt="AGS Logo" width="60" height="60"><img src="\images\AGS_text_nobg.png" alt="AGS text" width="120" height="60"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
