--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Cart/Index.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Cart/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AlmedalGameStore.Models.ViewModels.CartVM
-
 <form method="post">
+
     <br />
     <div class="container">
         <div class="card">
@@ -8,10 +8,10 @@
                 <div class="row">
                     <div class="col-6  pt-2">
                         <i class="fa fa-shopping-cart"></i> &nbsp;
-                        Shopping Cart
+                        Kundkorg
                     </div>
                     <div class="col-6 text-end">
-                        <a asp-area="Guest" asp-controller="Home" asp-action="Index" class="btn btn-outline-info btn-sm">Continue Shopping</a>
+                        <a asp-area="Guest" asp-controller="Home" asp-action="Index" class="btn btn-outline-info btn-sm">Fortsätt Handla</a>
                     </div>
                 </div>
             </div>
@@ -23,13 +23,10 @@
                         <div class="d-none d-lg-block col-lg-1 text-center py-2">
                             <img src="@item.Product.ImageUrl" class="rounded" width="100%" />
                         </div>
-                        <div class="col-12 col-lg-6 pt-md-3">
-                            <h5><strong>@item.Product.Title</strong></h5>
-                            <p><small>@Html.Raw(@item.Product.Description)</small></p>
-                        </div>
+
                         <div class="col-12  col-lg-5 text-center row">
                             <div class="col-4 text-md-right pt-4">
-                                <h6><strong>@item.Price.ToString("c")<span class="text-muted">&nbsp x &nbsp</span> @item.Count </strong></h6>
+                                <h6><strong>@item.Price.ToString("c")<span class="text-muted">&nbsp x &nbsp</span> @item.Count</strong></h6>
                             </div>
                             <div class="col-6 col-sm-4 col-lg-6 pt-2">
                                 <div class="w-75 btn-group" role="group">
@@ -51,6 +48,16 @@
                     </div>
                     <hr />
                 }
+                <div class="row">
+                    <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 pr-4">
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex justify-content-between bg-light">
+                                <span class="text-info">Total KR</span>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
