--- a/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Index.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Guest/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
                         </div>
                         <div>
                             <a asp-action="Details" class="btn btn-primary form-control"
-                            asp-route-id="@product.Id">Läs Mer</a>
+                            asp-route-productId="@product.Id">Läs Mer</a>
                         </div>
 
                 </div>
