--- a/AlmedalGameStoreWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -28,10 +28,15 @@
                 <span asp-validation-for="Input.City" class="text-danger"></span>
             </div>
              <div class="form-floating py-2 col-6">
+                <input asp-for="Input.StreetAddress" class="form-control"  aria-required="true" />
+                <label asp-for="Input.StreetAddress"></label>
+                <span asp-validation-for="Input.StreetAddress" class="text-danger"></span>
+            </div>
+         @*    <div class="form-floating py-2 col-6">
                 <input asp-for="Input.State" class="form-control"  aria-required="true" />
                 <label asp-for="Input.State"></label>
                 <span asp-validation-for="Input.State" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-floating py-2 col-6">
                 <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" />
                 <label asp-for="Input.PhoneNumber"></label>
