--- a/AlmedalGameStoreWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -68,7 +68,7 @@
             <div class="card-footer">
                 <div class="card-footer row">
                     <div class="col-sm-12 col-lg-4 col-md-6 offset-lg-8 offset-md-6 ">
-                        <a asp-action="Checkout" class="btn btn-success form-control">Slutför köp</a>
+                        <a asp-action="Checkout" class="btn btn-success form-control">Till Kassan</a>
                     </div>
                 </div>
             </div>
