--- a/AlmedalGameStoreWeb/Areas/Customer/Views/Cart/Checkout.cshtml
+++ b/AlmedalGameStoreWeb/Areas/Customer/Views/Cart/Checkout.cshtml
@@ -98,7 +98,8 @@
             </div>
             <div class="col-md-4">
                 <a id="cancel" asp-action="Index" class="btn btn-danger me-3">Gå tillbaka</a>
-                <button type="submit" onclick="return " class="btn btn-success">Till Betalning</button>
+                <button type="submit" asp-action="StripeCheckoutPOST" class="btn btn-success">Betala med kort</button>
+                <button type="submit" onclick="" class="btn btn-success">Betala på plats</button>
             </div>
         </div>
     </div>
