--- a/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
+++ b/AlmedalGameStoreWeb/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Genre" asp-action="Index">Genre</a>
                                 <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Produkt</a>
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
                                 <div class="dropdown-divider"></div>
                                 @* <a class="dropdown-item" href="#">Separated link</a>*@
                             </div>
